LLM Training 40 epochs

--- a/Sonatel_Huawei_4G/LLM_Training_1.ipynb
+++ b/Sonatel_Huawei_4G/LLM_Training_1.ipynb
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-08-06T11:12:32.022482Z",
@@ -845,7 +845,7 @@
     "train_dataset = KPIGPTDataset(train_seq)\n",
     "test_dataset  = KPIGPTDataset(test_seq)\n",
     "train_loader  = DataLoader(train_dataset, batch_size=300, shuffle=True, drop_last=True)\n",
-    "test_loader   = DataLoader(train_dataset, batch_size=300, shuffle=False, drop_last=True)"
+    "test_loader   = DataLoader(test_dataset, batch_size=300, shuffle=False, drop_last=True)"
    ]
   },
   {
