--- a/Sonatel_Huawei_4G/LLM_Training.ipynb
+++ b/Sonatel_Huawei_4G/LLM_Training.ipynb
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-08-04T10:20:02.512116Z",
@@ -830,7 +830,7 @@
     "train_dataset = KPIGPTDataset(train_seq)\n",
     "test_dataset  = KPIGPTDataset(test_seq)\n",
     "train_loader  = DataLoader(train_dataset, batch_size=300, shuffle=True, drop_last=True)\n",
-    "test_loader   = DataLoader(train_dataset, batch_size=300, shuffle=False, drop_last=True)"
+    "test_loader   = DataLoader(test_dataset, batch_size=300, shuffle=False, drop_last=True)"
    ]
   },
   {
