GPT like model for KPI forecasting

--- a/GPT_finetuning.ipynb
+++ b/GPT_finetuning.ipynb
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "6831de88",
    "metadata": {},
    "outputs": [
@@ -732,7 +732,7 @@
     }
    ],
    "source": [
-    "test_loader = DataLoader(train_dataset, batch_size=32, shuffle=True, drop_last=True)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=32, shuffle=True, drop_last=True)\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
@@ -751,11 +751,11 @@
     "\n",
     "# Concatenate all batches\n",
     "all_preds = np.concatenate(all_preds).reshape(-1, 1)\n",
-    "all_true = np.concatenate(all_true).reshape(-1, 1)\n",
+    "all_true  = np.concatenate(all_true).reshape(-1, 1)\n",
     "\n",
     "# Inverse transform (to original CDR values)\n",
     "all_preds = scaler_y.inverse_transform(all_preds)\n",
-    "all_true = scaler_y.inverse_transform(all_true)\n",
+    "all_true  = scaler_y.inverse_transform(all_true)\n",
     "\n",
     "# --- Plot ---\n",
     "plt.figure(figsize=(10, 5))\n",
